# Polybot

./: .dockerignore  .env.example  .gitignore  BONEREAPER-ANALYSIS.md  CLAUDE.md  Dockerfile  OPTIMIZER.md  README.md  REAL-MODE-POSTMORTEM.md  ROADMAP.md  RUNBOOK.md  STRATEGY-IMPROVEMENTS.md  package.json  pyproject.toml  redemption-code.md
polybot/: __init__.py  api.py  categories.py  cli.py  config.py  copier.py  db.py  detector.py  firehose.py  listener.py  models.py  profitability.py  redeem.py  slippage.py  strategy.py
reaper/: .gitignore  .rsyncignore  FILL-SYSTEM.md  ROADMAP.md  dev.sh  package-lock.json  package.json  tsconfig.json
reaper/src/: api-server.ts  db.ts  main.ts
reaper/tests/: analysis.test.ts  backtest.test.ts  clob-adapter.test.ts  clob-deep.test.ts  db.test.ts  engine.test.ts  errors.test.ts  fill-processor.test.ts  gamma-feed.test.ts  goldsky-backfill.test.ts  goldsky-feed.test.ts  grounded-fills.test.ts  inventory-guard.test.ts  queue-sim.test.ts  strategies.test.ts  window-manager.test.ts
scripts/: cloud-run-setup.sh  deploy.sh  dev.sh  stop.sh
tests/: test_cli.py  test_copier.py  test_db.py  test_detector.py  test_firehose.py  test_models.py  test_profitability.py  test_slippage.py
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts
web/app/: layout.tsx  page.tsx
web/components/: category-badge.tsx  copy-target-detail.tsx  legend.tsx  nav.tsx  pnl-cell.tsx  strategy-charts.tsx  wallet-link.tsx  (+1 more)
worker/: dev.sh  package-lock.json  package.json  schema-firehose.sql  schema-ops.sql  schema.sql  wrangler.toml
(+107 files in other folders)
